# embedkit

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt
src/embedkit/: __init__.py  base.py  models.py  utils.py
src/embedkit/providers/: __init__.py  cohere.py  colpali.py  jina.py  snowflake.py
tests/: conftest.py  test_embedkit.py
