[project]
name = "embedkit"
version = "0.1.0"
description = "A simple toolkit for generating vector embeddings across multiple providers and models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.7.0",
    "cohere>=5.15.0",
    "colpali-engine>=0.3.0,<0.4.0",
    "pillow>=11.2.1",
    "torch<=2.5",
    "transformers",
]
authors = [
    {name = "JP Hwang", email = "me@jphwang.com"},
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/embedkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=embedkit --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
